詳細・修正・削除を追加、リファクタ

--- a/Contents/TODO.txt
+++ b/Contents/TODO.txt
@@ -3,13 +3,15 @@
                     ・意図しないタイミングでJSの関数が起動する
                     ・大分類名などを入力しなくてもインサートできる
                     ・小分類を入力するとき、他の大分類の直下に同名の小分類がある場合、小分類が追加されない。
+                    ・sort_numberが正しく割り振られない
+                    ・ノート表示欄が縦に長すぎる
 
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 必須機能
 
-・詳細表示
-・訂正
-・削除
+                    ・詳細表示
+                    ・訂正
+                    ・削除
 ・タグ検索
 ・重要度・学習状況による絞り込み表示
 ・関連カード登録
@@ -29,13 +31,17 @@
 ・user_idによるユーザー管理
 ・リストが読み込まれるまでの待ち時間にアイコン表示
 ・SQLクエリ設定箇所を共通化
-・現在開いているリストの名前を表示
+                    ・現在開いているリストの名前を表示
 ・重要度5のカードの色を変える
 ・学習状況「完璧」or 重要度「1」の単語を非表示にできる設定
-・単語帳が横方向に並んで表示されるようにする
-・ノートを画面手前に固定する
-・ノートの文章を改行対応させる
-
+                    ・単語帳が横方向に並んで表示されるようにする
+                    ・単語一覧をスクロール対応させる
+                    ・ノートの文章を改行対応させる
+・sort_numberを修正できるようにする
+・オフラインで使えるようにする
+・単語の「複製」ができるようにする
+                    ・単語一覧から小分類一覧に飛べるようにする
+・分類一覧をプルダウンから選べるようにする
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 そのほか展望
 
