主要な機能を実装

--- a/Contents/TODO.txt
+++ b/Contents/TODO.txt
@@ -5,6 +5,8 @@
                     ・小分類を入力するとき、他の大分類の直下に同名の小分類がある場合、小分類が追加されない。
                     ・sort_numberが正しく割り振られない
                     ・ノート表示欄が縦に長すぎる
+                    ・put時のプルダウン生成で、自分の情報しか表示されない
+                    ・post時のプルダウン生成で、入力履歴が混入する
 
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 必須機能
@@ -19,7 +21,7 @@
 ・メニューバー
 ・Modelを使用してバリデーション設定
 ・エラーハンドリング
-・DBロールバック
+                    ・DBロールバック
 
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 品質向上
@@ -37,11 +39,15 @@
                     ・単語帳が横方向に並んで表示されるようにする
                     ・単語一覧をスクロール対応させる
                     ・ノートの文章を改行対応させる
-・sort_numberを修正できるようにする
-・オフラインで使えるようにする
+                    ・sort_numberを修正できるようにする
+                    ・一覧からノートを更新できるようにする
 ・単語の「複製」ができるようにする
                     ・単語一覧から小分類一覧に飛べるようにする
-・分類一覧をプルダウンから選べるようにする
+                    ・分類一覧をプルダウンから選べるようにする
+・「しおり」を作れるようにする(Cards01 is_reaf = True)
+                    ・jQueryをオフラインで使えるようにする
+・イラストを表示する
+
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 そのほか展望
 
