不具合修正：しおり作成

--- a/Contents/TODO.txt
+++ b/Contents/TODO.txt
@@ -44,7 +44,7 @@
 ・単語の「複製」ができるようにする
                     ・単語一覧から小分類一覧に飛べるようにする
                     ・分類一覧をプルダウンから選べるようにする
-・「しおり」を作れるようにする(Cards01 is_reaf = True)
+                    ・「しおり」を作れるようにする(Cards01 is_separator = True)
                     ・jQueryをオフラインで使えるようにする
 ・イラストを表示する
 
