データ受け渡し方法・CSS・JSを共通化

--- a/Contents/TODO.txt
+++ b/Contents/TODO.txt
@@ -7,6 +7,8 @@
                     ・ノート表示欄が縦に長すぎる
                     ・put時のプルダウン生成で、自分の情報しか表示されない
                     ・post時のプルダウン生成で、入力履歴が混入する
+・詳細表示画面でタグ情報を読み込めない
+・詳細表示画面で重要度、学習状況が読み込めない
 
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 必須機能
@@ -15,6 +17,7 @@
                     ・訂正
                     ・削除
 ・タグ検索
+・設定
 ・重要度・学習状況による絞り込み表示
 ・関連カード登録
 ・小テスト機能
@@ -47,6 +50,7 @@
                     ・「しおり」を作れるようにする(Cards01 is_separator = True)
                     ・jQueryをオフラインで使えるようにする
 ・イラストを表示する
+・SQLインジェクション対策
 
 ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 そのほか展望
@@ -55,3 +59,7 @@
 ・Django導入
 ・flatter導入
 ・Node.js導入
+
+'03スマートフォントUI'
+'JKゴシックL'
+'Anders 標準'
